--- a/RaspberryPi/pi.conf
+++ b/RaspberryPi/pi.conf
@@ -1,3 +1,1 @@
-{"app":"mypi","version":"4b"}
-{"app":"mypi2","version":"4b"}
-{"app":"mypi2","version":"4b"}
+{"app":"myPi","version":"1.2","mode":"dev"}
