--- a/RaspberryPi/node_apps/pi.conf
+++ b/RaspberryPi/node_apps/pi.conf
@@ -1,1 +1,1 @@
-{"app":"myPi","version":"1.2","mode":"dev","update":"230809","ledYellow":"OFF","ledGreen":"OFF","ledRed":"ON","OledDisplay":"OFF"}
+{"app":"myPi","version":"1.2","mode":"dev","update":"230809","ledYellow":"ON","ledGreen":"OFF","ledRed":"ON","OledDisplay":"OFF","Relay1":"OFF"}
